# scaffops

./: .gitignore  Cargo.toml  LICENSE  README.md  changelogging.toml  pyproject.toml
src/: app.rs  generator.rs  git.rs  init.rs  lib.rs  main.rs
src/commands/: mod.rs
