[package]
name = "scaffops"
version = "0.1.0"
authors = [
    "nekitdev <nekit@nekit.dev>",
    "bswck <bartoszpiotrslawecki@gmail.com>",
]
edition = "2021"
description = "..."
documentation = "https://docs.rs/scaffops"
readme = "README.md"
repository = "https://github.com/scaffops/scaffops"
homepage = "https://scaffops.dev/"
license = "MIT"
keywords = ["scaffold", "template"]
categories = ["command-line-utilities", "development-tools"]

[dependencies.clap]
version = "4.5.13"
features = ["derive"]

[dependencies.handlebars]
version = "6.0.0"

[dependencies.miette]
version = "7.2.0"
features = ["fancy"]

[dependencies.notify]
version = "6.1.1"
features = ["serde"]

[dependencies.thiserror]
version = "1.0.63"

[dependencies.toml]
version = "0.8.19"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]
